cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(txobtool)
if(MSVC11)
  set(CMAKE_GENERATOR_TOOLSET "v110_xp" CACHE STRING "Name of generator toolset." FORCE)
endif()
if(MSVC12)
  set(CMAKE_GENERATOR_TOOLSET "v120_xp" CACHE STRING "Name of generator toolset." FORCE)
endif()
if(MSVC14)
  set(CMAKE_GENERATOR_TOOLSET "v140_xp" CACHE STRING "Name of generator toolset." FORCE)
endif()
if(APPLE)
  set(CMAKE_MACOSX_RPATH 1)
endif()
set(TXOBTOOL_MAJOR 1)
set(TXOBTOOL_MINOR 0)
set(TXOBTOOL_PATCHLEVEL 1)
if(NOT MSVC AND NOT XCODE_VERSION AND NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel." FORCE)
endif()
option(BUILD64 "Build x86_64(unix only)" ON)
set(CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}")
set(ROOT_SOURCE_DIR "${PROJECT_SOURCE_DIR}")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${ROOT_SOURCE_DIR}/cmake")
include(AddDep)
include(AddTarget)
include(AutoFiles)
ADD_DEP_INCLUDE_DIR("${ROOT_SOURCE_DIR}/dep/libsundaowen")
ADD_DEP_INCLUDE_DIR("${ROOT_SOURCE_DIR}/dep/zlib")
ADD_DEP_INCLUDE_DIR("${ROOT_SOURCE_DIR}/dep/libpng")
ADD_DEP_INCLUDE_DIR("${ROOT_SOURCE_DIR}/dep/PVRTexTool/Library")
ADD_DEP_LIBRARY_DIR("${ROOT_SOURCE_DIR}/dep/zlib")
ADD_DEP_LIBRARY_DIR("${ROOT_SOURCE_DIR}/dep/libpng")
ADD_DEP_LIBRARY_DIR("${ROOT_SOURCE_DIR}/dep/PVRTexTool/Library")
if(UNIX)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
  if(BUILD64)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m64")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64")
  else()
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m32")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32")
  endif()
endif()
if(MSVC OR XCODE_VERSION)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
else()
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}")
endif()
add_definitions(-DTXOBTOOL_VERSION="${TXOBTOOL_MAJOR}.${TXOBTOOL_MINOR}.${TXOBTOOL_PATCHLEVEL}")
if(WIN32)
  add_definitions(-D_CRT_SECURE_NO_WARNINGS)
else()
  add_definitions(-D_FILE_OFFSET_BITS=64)
  if(NOT APPLE)
    add_definitions(-Wno-multichar -Wno-unused-result)
  endif()
  set(CMAKE_INSTALL_RPATH .)
  set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
endif()
add_subdirectory(src)
