AUTO_FILES("." "src" "\\.(cpp|h)$")
include_directories(${COMMON_INCLUDE_DIR})
link_directories(${COMMON_LIBRARY_DIR})
if(WIN32)
  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
  set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} /MT")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
  set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /MT")
endif()
ADD_EXE(txobtool "${src}")
if(WIN32)
  target_link_libraries(txobtool libpng16_static zlibstatic PVRTexLib)
  set_target_properties(txobtool PROPERTIES LINK_FLAGS_DEBUG "/NODEFAULTLIB:LIBCMT")
else()
  target_link_libraries(txobtool png16 z PVRTexLib pthread)
  if(APPLE)
    target_link_libraries(txobtool iconv)
  endif()
endif()
install(TARGETS txobtool DESTINATION bin)
